--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "bin": {
     "get-types": "./bin/cli.js"
   },
-  "main": "./dist/index.js",
-  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./src/index.ts",
   "scripts": {
     "build-fast": "tsup",
