--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "access": "public"
   },
   "files": [
-    "dist",
+    "outdir",
     "bin",
     "src"
   ],
   "bin": {
-    "get-types": "./bin/cli.js"
+    "get-types": "./bin/cli.mjs"
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "main": "./outdir/index.cjs",
+  "module": "./outdir/index.js",
   "types": "./src/index.ts",
   "scripts": {
     "build-fast": "tsup",
@@ -37,7 +37,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/lodash": "^4.14.185",
-    "@types/node": "^16.18.2",
+    "@types/node": "14",
     "@types/qs": "^6.9.7",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
