--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@types/lodash": "^4.14.185",
     "@types/node": "14",
     "@types/qs": "^6.9.7",
-    "axios": "^0.27.2",
+    "@vue/reactivity": "^3.2.45",
+    "axios": "^1.2.1",
     "lodash": "^4.17.21",
     "openapi-typescript": "^5.4.0",
     "qs": "^6.11.0"
