test: add type test case

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "esModuleInterop": true,
     "moduleResolution": "Node",
     "skipLibCheck": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noImplicitAny": true,
     "allowJs": true,
     "noEmit": true,
@@ -29,5 +29,7 @@
   },
   "include": [
     "src/**/*",
+    "util/**/*",
+    "test/**/*"
   ],
 }
