--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "build-fast": "tsup",
     "build": "pnpm run build-fast -- --dts-resolve",
-    "test": "vitest run",
+    "test": "tsc --project ./tsconfig.json --noEmit && vitest run",
     "prepublishOnly": "pnpm run build",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
