--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
   },
   "devDependencies": {
     "@egoist/prettier-config": "1.0.0",
+    "@types/jsdom-global": "^3.0.4",
+    "jsdom": "^21.1.0",
+    "jsdom-global": "^3.0.2",
     "prettier": "2.8.3",
     "tsup": "^6.5.0",
     "typescript": "4.9.4",
