--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
             ${{ runner.os }}-
 
       - name: Install pnpm
-        run: npm i -g pnpm
+        run: npm i -g pnpm@~7
 
       - name: Install deps
         run: pnpm i
@@ -50,7 +50,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: ['test']
+    needs: ["test"]
     if: "!contains(github.event.head_commit.message, 'skip-release') && !contains(github.event.head_commit.message, 'skip-ci') && github.event_name != 'pull_request'"
     steps:
       - uses: actions/checkout@v3
@@ -68,7 +68,7 @@ jobs:
             ${{ runner.os }}-${{ matrix.node-version }}-release-${{ env.cache-name }}-
             ${{ runner.os }}-${{ matrix.node-version }}-release-
             ${{ runner.os }}-
-      - run: npm i -g pnpm
+      - run: npm i -g pnpm@~7
       - run: pnpm i
       - run: pnpx semantic-release --branches release
         env:
