--- a/.github/workflows/vitepress.yml
+++ b/.github/workflows/vitepress.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 16
       - name: Install pnpm
-        run: npm i -g pnpm
+        run: npm i -g pnpm@~7
       - name: Install Deps
         run: pnpm install --frozen-lockfile
 
