--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,10 +30,10 @@
         "src/*"
       ],
       "@/test/*": [
-        "test/*"
+        "src/test/*"
       ],
       "@/util/*": [
-        "util/*"
+        "src/util/*"
       ]
     }
   },
@@ -41,7 +41,7 @@
     "api-typing-meta.d.ts",
     "src/**/*",
     "util/**/*",
-    "test/**/*"
+    "src/test/**/*"
   ],
   "exclude": [
     "**/node_modules/**"
