--- a/package.json
+++ b/package.json
@@ -44,25 +44,25 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/lodash": "^4.14.194",
-    "@types/node": "16",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "20",
     "@types/qs": "^6.9.7",
-    "@vue/reactivity": "^3.2.47",
-    "axios": "^1.3.5",
+    "@vue/reactivity": "^3.4.21",
+    "axios": "^1.6.7",
     "lodash": "^4.17.21",
-    "openapi-typescript": "^6.2.1",
-    "qs": "^6.11.0"
+    "openapi-typescript": "^6.7.4",
+    "qs": "^6.11.2"
   },
   "devDependencies": {
     "@egoist/prettier-config": "1.0.0",
-    "@types/jsdom-global": "^3.0.4",
+    "@types/jsdom-global": "^3.0.7",
     "jsdom": "^21.1.1",
     "jsdom-global": "^3.0.2",
-    "prettier": "2.8.7",
-    "tsup": "^6.7.0",
-    "typescript": "4.9.4",
-    "vitepress": "1.0.0-alpha.72",
-    "vitest": "0.30.1",
-    "vue": "^3.2.47"
+    "prettier": "3.2.5",
+    "tsup": "^8.0.2",
+    "typescript": "5.3.3",
+    "vitepress": "1.0.0-rc.44",
+    "vitest": "^1.3.1",
+    "vue": "^3.4.21"
   }
 }
