--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - uses: actions/setup-node@v3
         with:
@@ -54,6 +56,8 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'skip-release') && !contains(github.event.head_commit.message, 'skip-ci') && github.event_name != 'pull_request'"
     steps:
       - uses: actions/checkout@v3
+        with:
+          persist-credentials: false
       - uses: actions/setup-node@v3
         with:
           node-version: 20.x
@@ -70,6 +74,7 @@ jobs:
             ${{ runner.os }}-
       - run: npm i -g pnpm@~8
       - run: pnpm i
+      - run: pnpm run build
       - run: pnpx semantic-release --branches release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
