--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
   "main": "./outdir/index.js",
   "module": "./outdir/index.mjs",
   "types": "./src/index.ts",
+  "type": "module",
   "scripts": {
     "build-fast": "tsup",
-    "build": "pnpm run build-fast -- --dts-resolve",
+    "build": "pnpm run build-fast --",
     "test": "vitest run && tsc --project ./tsconfig.json --noEmit",
     "prepublishOnly": "pnpm run build",
     "docs:dev": "vitepress dev docs",
@@ -48,7 +49,7 @@
     "@types/node": "20",
     "@types/qs": "^6.9.7",
     "@vue/reactivity": "^3.4.21",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "lodash": "^4.17.21",
     "openapi-typescript": "^6.7.4",
     "qs": "^6.11.2"
@@ -61,8 +62,11 @@
     "prettier": "3.2.5",
     "tsup": "^8.0.2",
     "typescript": "5.3.3",
-    "vitepress": "1.0.0-rc.44",
-    "vitest": "^1.3.1",
+    "vitepress": "1.1.4",
+    "vitest": "^1.5.2",
     "vue": "^3.4.21"
+  },
+  "volta": {
+    "node": "20.9.0"
   }
 }
