--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,10 +38,9 @@
     }
   },
   "include": [
+    "src/**/*.ts",
+    "src/api-typing.ts",
     "api-typing-meta.d.ts",
-    "src/**/*",
-    "util/**/*",
-    "src/test/**/*"
   ],
   "exclude": [
     "**/node_modules/**"
