--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "build-fast": "tsup",
     "build": "pnpm run build-fast --",
-    "test": "vitest run && tsc --project ./tsconfig.json --noEmit",
+    "test": "pnpm run build && node ./scripts/init.js && vitest --run",
     "prepublishOnly": "pnpm run build",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
@@ -56,17 +56,18 @@
   },
   "devDependencies": {
     "@egoist/prettier-config": "1.0.0",
-    "@types/jsdom-global": "^3.0.7",
+    "@stackblitz/sdk": "^1.11.0",
     "jsdom": "^24.1.1",
-    "jsdom-global": "^3.0.2",
     "prettier": "3.3.3",
+    "ts-node": "^10.9.2",
     "tsup": "^8.2.4",
-    "typescript": "5.3.3",
+    "typescript": "5.5.4",
     "vitepress": "1.3.3",
-    "vitest": "^2.0.5",
-    "vue": "^3.4.38"
+    "vitest": "2.0.5",
+    "vue": "^3.4.38",
+    "zx": "^8.1.4"
   },
   "volta": {
-    "node": "20.9.0"
+    "node": "20.16.0"
   }
 }
