--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   "scripts": {
     "build-fast": "tsup",
     "build": "pnpm run build-fast --",
-    "test": "pnpm run build && node ./scripts/init.js && vitest --run",
+    "test": "pnpm run build && node ./scripts/init.js && vitest --run --coverage",
+    "test:ui": "vitest --ui --coverage",
+    "test:coverage": "vitest run --coverage",
     "prepublishOnly": "pnpm run build",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
@@ -57,6 +59,8 @@
   "devDependencies": {
     "@egoist/prettier-config": "1.0.0",
     "@stackblitz/sdk": "^1.11.0",
+    "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/ui": "^2.0.5",
     "jsdom": "^24.1.1",
     "prettier": "3.3.3",
     "ts-node": "^10.9.2",
