fix: 修复类型导入没有加 type 的问题

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "outdir",
     "resolveJsonModule": true,
+    "verbatimModuleSyntax": true,
     "lib": [
       "DOM",
       "ESNext",
