--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/lodash": "^4.17.16",
-    "@types/node": "20",
+    "@types/node": "^22.15.1",
     "@types/qs": "^6.9.18",
     "@vue/reactivity": "^3.5.13",
     "axios": "^1.8.1",
@@ -61,7 +61,6 @@
     "@stackblitz/sdk": "^1.11.0",
     "@vitest/coverage-v8": "^3.0.8",
     "@vitest/ui": "^3.0.8",
-    "jsdom": "^24.1.1",
     "prettier": "3.5.3",
     "ts-node": "^10.9.2",
     "tsup": "^8.4.0",
@@ -72,6 +71,6 @@
     "zx": "^8.4.0"
   },
   "volta": {
-    "node": "20.16.0"
+    "node": "22.15.0"
   }
 }
